--- a/srv/package.json
+++ b/srv/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node --harmony index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +15,7 @@
     "koa-cors": "0.0.16",
     "koa-logger": "^1.3.1",
     "koa-route": "^2.4.2",
+    "koa-static": "^2.0.0",
     "pitchfork": "0.0.12",
     "superagent": "^3.3.2",
     "thunkify": "^2.1.2"
