--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --harmony index.js",
+    "start": "node --harmony srv/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
