--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node --harmony srv/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "elm-make src/Main.elm --output app.js; cp -r index.html app.js css build"
   },
   "author": "",
   "license": "ISC",
