--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node --harmony srv/index.js",
+    "dev": "./node_modules/.bin/elm-live src/Main.elm --pushstate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "elm-make src/Main.elm --output app.js; cp -r index.html app.js css build"
   },
@@ -12,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.22.0",
+    "elm-live": "^2.7.4",
     "koa": "^1.2.4",
     "koa-cors": "0.0.16",
     "koa-logger": "^1.3.1",
+    "koa-mount": "^3.0.0",
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
     "pitchfork": "0.0.12",
