--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "koa": "^1.2.4",
     "koa-cors": "0.0.16",
     "koa-logger": "^1.3.1",
-    "koa-mount": "^3.0.0",
     "koa-route": "^2.4.2",
+    "koa-send": "^4.1.0",
     "koa-static": "^2.0.0",
     "pitchfork": "0.0.12",
     "superagent": "^3.3.2",
